--- a/GraphQLDemo.API/GraphQLDemo.API.csproj
+++ b/GraphQLDemo.API/GraphQLDemo.API.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.5" />
+  </ItemGroup>
+
 </Project>
