--- a/GraphQLDemo.API/GraphQLDemo.API.csproj
+++ b/GraphQLDemo.API/GraphQLDemo.API.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.5" />
+    <PackageReference Include="HotChocolate.AspNetCore.Subscriptions" Version="10.5.5" />
   </ItemGroup>
 
   <ItemGroup>
