--- a/GraphQLDemo.API/GraphQLDemo.API.csproj
+++ b/GraphQLDemo.API/GraphQLDemo.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,6 +10,7 @@
     <PackageReference Include="Bogus" Version="35.5.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.5" />
     <PackageReference Include="HotChocolate.AspNetCore.Subscriptions" Version="10.5.5" />
+    <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.9.5" />
   </ItemGroup>
 
   <ItemGroup>
