--- a/GraphQLDemoAPI/appsettings.json
+++ b/GraphQLDemoAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=school.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
