--- a/GraphQLDemo.API/appsettings.json
+++ b/GraphQLDemo.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "school.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
